--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "services:down": "docker compose -f infra/compose.yaml down",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
+    "lint:eslint:check": "next lint --dir .",
     "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\" && npm run services:stop",
     "test:watch": "jest --watchAll --runInBand",
     "migration:create": "node-pg-migrate --migrations-dir infra/migrations create",
@@ -31,7 +32,12 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
+    "eslint-config-next": "14.2.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.6.0",
+    "i": "^0.3.7",
     "jest": "^29.6.2",
+    "npm": "^10.8.1",
     "prettier": "^2.8.8"
   }
 }
