--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "migration:up": "node-pg-migrate --migrations-dir infra/migrations --envPath .env.development up",
     "migration:down": "node-pg-migrate --migrations-dir infra/migrations --envPath .env.development down",
     "wait-for-postgres": "node ./infra/scripts/wait-for-postgres.js",
-    "prepare": "husky"
+    "prepare": "husky",
+    "commit": "cz"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "async-retry": "^1.3.3",
+    "commitizen": "^4.3.0",
     "dotenv": "^16.4.4",
     "dotenv-expand": "^11.0.6",
     "next": "^13.1.6",
@@ -35,6 +37,7 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "concurrently": "^8.2.2",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.6.0",
@@ -43,5 +46,10 @@
     "jest": "^29.6.2",
     "npm": "^10.8.1",
     "prettier": "^2.8.8"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
