--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down",
     "services:wait:database": "node ./infra/scripts/wait-for-postgres.js",
+    "migrations:up": "node-pg-migrate --migrations-dir infra/migrations --envPath .env.development up",
+    "migrations:down": "node-pg-migrate --migrations-dir infra/migrations --envPath .env.development down",
+    "migrations:create": "node-pg-migrate --migrations-dir infra/migrations create",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "next lint --dir .",
     "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\" && npm run services:stop",
     "test:watch": "jest --watchAll --runInBand",
-    "migration:create": "node-pg-migrate --migrations-dir infra/migrations create",
-    "migration:up": "node-pg-migrate --migrations-dir infra/migrations --envPath .env.development up",
-    "migration:down": "node-pg-migrate --migrations-dir infra/migrations --envPath .env.development down",
     "prepare": "husky",
     "commit": "cz"
   },
