--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,8 @@ POSTGRES_USER=local_user
 POSTGRES_DB=local_database
 POSTGRES_PASSWORD=local_password
 DATABASE_URL=postgress://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_POST/$POSTGRES_DB
+
+EMAIL_SMTP_HOST=localhost
+EMAIL_SMTP_PORT=1025
+EMAIL_SMTP_USER=
+EMAIL_SMTP_PASSWORD=
